# roll_tracker

./: .env.example  .gitignore  C2_0.zip.bak  CLAUDE.md  README.md  SETUP_LOG.md  docker-compose.yml  manual_maping_150s.txt  pyproject.toml  pyrightconfig.json  requirements-lock.txt  requirements-nodeps.txt  requirements.txt  temp.txt
app_mobile/: pubspec.yaml
app_web/: .env.example  README.md  index.html  package-lock.json  package.json  setup.sh
configs/: calibration_report.json  default.yaml  default_epoch_0.yaml  default_epoch_1.yaml  default_epoch_2.yaml  default_epoch_3.yaml  default_master.yaml  mat_blueprint.json  validation_color_hist_pose.yaml  validation_cp20_yolov8n.yaml  validation_cross_camera.yaml
docs/: Gemfile  _config.yml  calibration_guide.md  decisions-archive.md  index.md  undistortion_audit.md
edge_mismatch_triage/: temp.txt
mobile_app/: firebase.json  pubspec.yaml
notebooks/: d2_ms_vs_cont_term_vreq.ipynb  d3_stitch_eval_cam03.ipynb  inspect_cam03_poc2_tags.ipynb
planning/: README.md  WORKER_THREAD_INDEX.md
planning_F0_F1_F2_F3_Z3/: README.md  WORKER_THREAD_INDEX.md
scripts/: backfill_polylines.py  visualize_correction_comparison.py
tests/: conftest.py  test_blueprint_geometry.py  test_calibration_integration.py  test_config_system.py  test_contracts.py  test_d3_ilp_poc1.py  test_e2e.py  test_hysteresis.py  test_identity_registry.py  test_mat_line_detection.py  test_orchestration_cli.py  test_stage_a_contact_points.py  test_stage_c0_gating.py  test_stage_c0_triggers.py  test_stage_d0_cp3_kinematics.py  test_stage_d2_costs.py  (+6 more)
(+414 files in other folders)
