[project]
name = "roll-tracker"
version = "0.0.1"
description = "Offline BJJ video pipeline (skeleton)"
authors = [{ name = "Bryan Thomas" }]
requires-python = ">=3.10"
dependencies = [
  # Core numeric stack; we intentionally stay on NumPy 1.x to
  # avoid ABI issues with downstream wheels that are not yet
  # built against NumPy 2.x.
  "numpy>=1.26,<2",
  "pydantic>=2,<3",
  "pandas>=2,<3",
  "typer>=0.9,<1",
  "pyarrow>=14,<16",
  "pyyaml>=6,<7",
  "shapely>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "opencv-python>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bjj_pipeline", "src/calibration_pipeline", "src/training_pipeline"]

[tool.hatch.build.targets.sdist]
include = ["src/bjj_pipeline", "src/calibration_pipeline", "src/training_pipeline"]
